# cat-detector

./: .gitignore  anaconda-project.yml  environment.yml  pyproject.toml  pyproject.toml.bak
.designs/: cat-detector_high-level_design
.docs/: dlink_cam_config.README.md  installation_of_anaconda.md  python_package_exceptions.README.md  solutions.README.md
.models/installs/owlvit/: owlvit.tar.xz.partih
src/: camera_capture.py  zero_shot_detection.py
src/apps/: data_utils.py  test.py  train.py  video_uri_builder.py
src/notebooks/: zero shot learning test.ipynb
src/types/: cv.py  files.py  models.py  system.py
